--- a/NoteApp/NoteAppUI/NoteAppUI.csproj
+++ b/NoteApp/NoteAppUI/NoteAppUI.csproj
@@ -45,6 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormAboutNote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAboutNote.Designer.cs">
+      <DependentUpon>FormAboutNote.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormNote.Designer.cs" />
+    <Compile Include="FromNote.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +71,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -74,6 +85,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{6c93863e-16b2-4a9b-ba8d-9af4d9fa86af}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
